# spacetime-knowledge-universe

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  render-requirements.txt  render.yaml  render_main.py  requirements.txt  scf-requirements.txt  scf_main.py
.github/workflows/: pages.yml
config/: __init__.py  settings.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_EDGEOONE.md  DEPLOYMENT_FREE.md  batch_ocr.py  batch_ocr_v2.py  batch_ocr_v3.py  extract_kp.py  knowledge_points_raw.json  lessons_clean.json  textbook_raw_ocr.txt  update_b9a.py
frontend/: index.html
public/: index.html  shop.html
scripts/: init_db.sql
src/: __init__.py  main.py
src/agents/: __init__.py  base_agent.py  history_agent.py  math_agent.py  physics_agent.py
src/api/: __init__.py  gamification.py  knowledge_graph.py  learn.py  shop.py  textbooks.py  users.py
src/core/: __init__.py
src/core/gamification/: __init__.py  engine.py  shop.py  user_asset.py
src/core/knowledge_graph/: __init__.py  models.py  repository.py  seed_data.py  service.py
src/core/learning/: __init__.py  engine.py
src/core/parser/: __init__.py  textbook_parser.py
src/core/router/: __init__.py  principal_agent.py
src/data/: __init__.py  history_data.py  math_data.py  physics_data.py
src/models/: __init__.py  base.py  gamification.py  schemas.py  subject.py  user.py
tests/: test_gamification.py  test_knowledge_graph.py  test_math.py  test_parser.py  test_physics.py  test_router.py  test_seed_data.py  test_shop.py
